--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,11 @@
 				<configuration>
   				<cloudHubDeployment>
   				<uri>https://anypoint.mulesoft.com</uri>
-  				<muleVersion>${app.runtime}</muleVersion>
-  				<username>${anypointusername}</username>
-  				<password>${anypointpassword}</password>
-  				<applicationName>${app.name}</applicationName>
-  				<environment>${env}</environment>
+  				<muleVersion>4.3.0</muleVersion>
+  				<username>ashish-trial</username>
+  				<password>Apisero@2021</password>
+  				<applicationName>mule-app-cicd-github</applicationName>
+  				<environment>Sandbox</environment>
   				<workerType>MICRO</workerType>
   				<region>us-east-2</region>
   				<workers>1</workers>
