--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
   				<cloudHubDeployment>
   				<uri>https://anypoint.mulesoft.com</uri>
   				<muleVersion>4.3.0</muleVersion>
-  				<username>ashish-trial</username>
-  				<password>Apisero@2021</password>
+  				<username>${anypoint.username}</username>
+  				<password>${anypoint.password}</password>
   				<applicationName>mule-app-cicd-github</applicationName>
   				<environment>Sandbox</environment>
   				<workerType>MICRO</workerType>
